增加服务编排功能
Commit by Andy.Zhang
Email: ztao8607@gmail.com
