# server/mongo/connect.go
@@ -296,6 +296,12 @@ func GetSvcConfGroupByName(name, ns string) (scg interface{}, err error) {
 	return
 }
 
+// GetAllSvcConfGroupByNs 获取指定命名空间下的所有服务编排数据
+func GetAllSvcConfGroupByNs(ns string)(scg []interface{}, err error){
+	err = MongoSvcConfGroup().Find(bson.M{"namespace":ns}).All(&scg)
+	return
+}
+
 func SaveSvcConfGroup(scg interface{}) error {
 	return MongoSvcConfGroup().Insert(&scg)
 }
